k8s/monitoring/redis-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: session-database
  labels:
    app: redis-exporter
spec:
  selector:
    app: redis-exporter
  ports:
    - port: 9121
      targetPort: 9121
  type: ClusterIP
